Dev: Follow up from previous "fix" - table layout will collapse if it can.
Just remembered this with the unit tests failing. So the table, which will be in its own full width container is now in a block.

--- a/css/dataTables.dataTables.scss
+++ b/css/dataTables.dataTables.scss
@@ -298,6 +298,14 @@ div.dt-container {
 		display: table;
 		clear: both;
 		width: 100%;
+
+		&.dt-layout-table {
+			display: block;
+
+			div.dt-layout-cell {
+				display: block;
+			}
+		}
 	}
 
 	div.dt-layout-cell {
